src/test/resources/entity_test/valid/Person1.entity
Person1 {  // OK
 id:int  ;  name : 
   string ; }